@@ -102,7 +102,8 @@ namespace Mono.Debugging.Soft
 					var vars = new Dictionary<string, string> ();
 					foreach (string k in psi.EnvironmentVariables.Keys)
 						vars [k] = psi.EnvironmentVariables [k];
-					return Runtime.ProcessService.StartConsoleProcess (psi.FileName, psi.Arguments, psi.WorkingDirectory, vars, ExternalConsoleFactory.Instance.CreateConsole (dsi.CloseExternalConsoleOnExit), null);
+					return Runtime.ProcessService.StartConsoleProcess (psi.FileName, psi.Arguments, psi.WorkingDirectory,
+						vars, ExternalConsoleFactory.Instance.CreateConsole (dsi.CloseExternalConsoleOnExit), null);
 				};
 			}
 			*/
@@ -585,7 +586,7 @@ namespace Mono.Debugging.Soft
 			}
 		}
 		
-		void HandleEvent  (Event e, bool dequeuing)
+		void HandleEvent (Event e, bool dequeuing)
 		{
 			if (dequeuing && exited)
 				return;
@@ -606,8 +607,24 @@ namespace Mono.Debugging.Soft
 				OnDebuggerOutput (false, string.Format ("Loaded assembly: {0}{1}\n", ae.Assembly.Location, flagExt));
 			}
 			
+			if (e is VMStartEvent) {
+				//HACK: 2.6.1 VM doesn't emit type load event, so work around it
+				var t = vm.RootDomain.Corlib.GetType ("System.Exception", false, false);
+				if (t != null)
+					ResolveBreakpoints (t);
+			}
+			
 			if (e is TypeLoadEvent) {
-				ResolveBreakpoints ((TypeLoadEvent)e);
+				var t = ((TypeLoadEvent)e).Type;
+				
+				string typeName = t.FullName;
+				
+				if (types.ContainsKey (typeName)) {
+					if (typeName != "System.Exception")
+						LoggingService.LogError ("Type '" + typeName + "' loaded more than once", null);
+				} else {
+					ResolveBreakpoints (t);
+				}
 			}
 			
 			if (e is BreakpointEvent) {
@@ -620,6 +637,9 @@ namespace Mono.Debugging.Soft
 			
 			if (e is ExceptionEvent) {
 				etype = TargetEventType.ExceptionThrown;
+				//FIXME: we should do something with the exception object 
+				//var ev = (ExceptionEvent)e;
+				//ev.Exception
 				resume = false;
 			}
 			
@@ -810,36 +830,39 @@ namespace Mono.Debugging.Soft
 			}
 		}
 		
-		void ResolveBreakpoints (TypeLoadEvent te)
+		void ResolveBreakpoints (TypeMirror t)
 		{
-			string typeName = te.Type.FullName;
-			types [typeName] = te.Type;
+			string typeName = t.FullName;
+			types [typeName] = t;
 			
 			/* Handle pending breakpoints */
 			
 			var resolved = new List<BreakEvent> ();
 			
-			foreach (string s in te.Type.GetSourceFiles ()) {
+			foreach (string s in t.GetSourceFiles ()) {
 				List<TypeMirror> typesList;
 				
 				if (source_to_type.TryGetValue (s, out typesList)) {
-					typesList.Add (te.Type);
+					typesList.Add (t);
 				} else {
 					typesList = new List<TypeMirror> ();
-					typesList.Add (te.Type);
+					typesList.Add (t);
 					source_to_type[s] = typesList;
 				}
 				
 				
 				foreach (var bp in pending_bes.OfType<Breakpoint> ()) {
 					if (System.IO.Path.GetFileName (bp.FileName) == s) {
-						Location l = GetLocFromType (te.Type, s, bp.Line);
+						Location l = GetLocFromType (t, s, bp.Line);
 						if (l != null) {
-							OnDebuggerOutput (false, string.Format ("Resolved pending breakpoint at '{0}:{1}' to {2}:{3}.\n", s, bp.Line, l.Method.FullName, l.ILOffset));
+							OnDebuggerOutput (false, string.Format ("Resolved pending breakpoint at '{0}:{1}' to {2}:{3}.\n",
+							                                        s, bp.Line, l.Method.FullName, l.ILOffset));
 							ResolvePendingBreakpoint (bp, l);
 							resolved.Add (bp);
 						} else {
-							OnDebuggerOutput (true, string.Format ("Could not insert pending breakpoint at '{0}:{1}'. Perhaps the source line does not contain any statements, or the source does not correspond to the current binary.\n", s, bp.Line));
+							OnDebuggerOutput (true, string.Format ("Could not insert pending breakpoint at '{0}:{1}'. " +
+								"Perhaps the source line does not contain any statements, or the source does not correspond " +
+								"to the current binary.\n", s, bp.Line));
 						}
 					}
 				}
@@ -853,7 +876,7 @@ namespace Mono.Debugging.Soft
 			
 			foreach (var cp in pending_bes.OfType<Catchpoint> ()) {
 				if (cp.ExceptionName == typeName) {
-					ResolvePendingCatchpoint (cp, te.Type);
+					ResolvePendingCatchpoint (cp, t);
 					resolved.Add (cp);
 				}
 			}
